# unp_read

./: .gitignore  CMakeLists.txt  README.md  main.cpp
demo/: CMakeLists.txt
demo/byteorder/: CMakeLists.txt  main.cpp
demo/daytime/: CMakeLists.txt  client.cpp  server.cpp
include/: unp.h
src/: readline.cpp  readn.cpp  unp.cpp  writen.cpp
